Password reset through email pages, downloadable link, profile pages
1. Pages created for reset, comformation and email sending.
2. Profile pages made, url configured
3. Ceated a page to download gazette

--- a/SPE-website/events/templates/events/events_detail.html
+++ b/SPE-website/events/templates/events/events_detail.html
@@ -21,7 +21,14 @@
                 {%endif%}
                 <p class="article-content">{{ object.content| markdown |safe }}</p>
                 <p> Last date to register : {{ object.reg_date|date:"M j, Y"}} </p>
-                <a class="btn btn-info mb-4" href="{{ object.google_doc_url }}">Register now!</a>
+                <!--if event has happened, dont display registration button-->
+                {% if object.has_happened %}
+                    <p></p>
+                {% else %}
+                    <a href="{{object.google_doc_url}}">
+                        <button type="button" class="btn btn-primary">Register</button>
+                    </a>
+                {% endif %}
             </div>
         </div>
         <!-- Post Body -->
