--- a/SPE-website/user/templates/user/password_reset_confirm.html
+++ b/SPE-website/user/templates/user/password_reset_confirm.html
@@ -28,14 +28,14 @@
                 <!-- Horizontal Divider -->
                 <hr class="accent-2 mb-4 mt-0 d-block mx-auto">
                 <!-- Horizontal Divider -->
-
                 {{ form|crispy }}
+
             </fieldset>
 
             <!-- Sign Up Button -->
             <div class="form-group">
                 <button type="submit" id="SignUpBtn" class="btn btn-outline-primary waves-effect"
-                style="margin-top: 0px;">Sign In</button>
+                style="margin-top: 0px;">Reset Password</button>
             </div>
             <!-- Sign Up Button -->
 
@@ -48,9 +48,6 @@
         <!-- Sign In Link -->
         <p id="LogInLink" class="text-muted">
             Don't have an account? <a class="ml-2" href="{% url 'signup-page' %}">Sign Up</a>
-        </p>
-        <p id="LogInLink" class="text-muted">
-            <a class="ml-2" href="{% url 'signup-page' %}"> Forgot password </a>
         </p>
         <!-- Sign In Link -->
 
