--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -46,7 +46,13 @@
             <div id="main-nav" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
                     <li><a href="{% url 'homepage' %}" class="nav-item nav-link active">Home</a></li>
-                    <li><a href="{% url 'blog-home' %}" class="nav-item nav-link">Blogs</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="nav-item nav-link" data-toggle="dropdown">Resources</a>
+                        <div class="dropdown-menu">
+                            <a href="{% url 'blog-home' %}" class="dropdown-item">Blogs</a>
+                            <a href="{% url 'gazette' %}" class="dropdown-item">Gazette</a>
+                        </div>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="nav-item nav-link" data-toggle="dropdown">Events</a>
                         <div class="dropdown-menu">
@@ -61,7 +67,7 @@
                     <li class="dropdown">
                         <a><span class="material-icons" id="AccountCircle" >account_circle</span></a>
                         <div class="dropdown-menu">
-                            <a href="{% url 'profile-page' %}" class="dropdown-item">Profile</a>
+                            <a href="{% url 'user-posts' user.username %}" class="dropdown-item">Profile</a>
                             <a href="{% url 'signout-page' %}" class="dropdown-item">Sign Out</a>
                         </div>
                     </li>
