footer changed about page styled

--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -16,15 +16,15 @@
 
 <!-- WHO WE ARE SECTION -->
 
-<div class="container-fluid" style="padding: 3% 4%;">
-    <div style="font-family: 'Dosis', sans-serif; color:#323d47; font-size:4rem; font-weight:400 ;text-align:center">
+<div class="container-fluid" style="padding: 6% 4%;">
+    <div style="font-family: 'Dosis', sans-serif; color:#323d47; font-size:5rem; font-weight:600 ;text-align:center; padding: 3% 0%;">
         <p>WHO WE ARE?</p>
     </div>
     <div class="row">
         <div class="col-md-6 col-sm-12" style="width: 100%; height: 500px; overflow: hidden;">
             <img src="https://miro.medium.com/max/13200/1*oZLddY0kmdL695Gtpu2ODQ.jpeg" style="height:100%;">
         </div>
-        <div class="col-md-6 col-sm-12" style="color: black; font-family: 'Open Sans', sans-serif; line-height: 1.5;font-size: 2.0rem; font-weight:500; padding: 3% 2%;">
+        <div class="col-md-6 col-sm-12" style="color: black; font-family: 'Open Sans', sans-serif; line-height: 1.8;font-size: 2.0rem; font-weight:500; padding: 0 2%;">
             <p>Since 1984, SPE IIT(ISM) STUDENT CHAPTER has kept expanding itself to from its being. Taking the oath to help the students, the institute and the society in general, it has been paving an incredible path. From being, one of its kind in the
                 country to be the OUTSTANDING STUDENT CHAPTER (2010 & 2015) globally, it has not only brought laurels to the institute but also the country at the global level. Its been all possible because of its strong commitment of helping students
                 learn more about the industry through offering the opportunity to network with company spokespeople, nurturing the exchange of ideas with others, and intensifying their knowledge through a plethora of educational and tech events throughout
@@ -38,7 +38,7 @@
 
 
 <div class="container aim" style="padding: 0% 4%; overflow: hidden; background-image: url(https://kecbio.com/wallpaper/hot-pink-minimalist-hd-desktop-wallpaper-For-Full-Resolution-Wallpaper.jpg); ">
-    <div style="font-family: 'Dosis', sans-serif; color:#323d47; font-size:3.5rem; text-align:center">
+    <div style="font-family: 'Dosis', sans-serif; color:#323d47; font-size:5rem; text-align:center; font-weight: 600;">
         <p>AIM OF THE CHAPTER</p>
     </div>
     <div class="row">
@@ -46,7 +46,7 @@
             <img src="https://img.freepik.com/vecteurs-libre/hommes-affaires-travaillant-discutant-problemes-tableaux-donnees_1262-19726.jpg?size=626&ext=jpg&ga=GA1.2.1246410860.1598659200" style="width: 100%; height: 500px; object-fit: cover;">
         </div>
         <div class="col-md-6 col-sm-12" data-aos="fade-left" data-aos-duration="1500">
-            <p style="color: black; padding: 10% 0; font-size: 2.0rem;">The chapter is devoted to fulfilling the mission of SPE international "To collect, disseminate, and exchange technical knowledge concerning the exploration, development and production of oil and gas resources, and related technologies for
+            <p style="color: black; padding: 10% 0; font-size: 2.0rem; line-height: 2.0;">The chapter is devoted to fulfilling the mission of SPE international "To collect, disseminate, and exchange technical knowledge concerning the exploration, development and production of oil and gas resources, and related technologies for
                 the public benefit; and to provide opportunities for professionals and students to enhance their technical and professional competence.”</p>
         </div>
     </div>
@@ -54,8 +54,8 @@
 
 <!-- ACHIEVEMENTS OF THE CHAPTER -->
 
-<div class="container" style="padding:3% 0%">
-    <div style="font-family: 'Dosis', sans-serif; color:#323d47; font-size:4rem; font-weight:400;text-align:center; letter-spacing:0.5px">
+<div class="container" style="padding:5% 0%">
+    <div style="font-family: 'Dosis', sans-serif; color:#323d47; font-size:5rem; font-weight:600;text-align:center; letter-spacing:0.5px">
         <p>ACHIEVEMENTS</p>
     </div>
 
@@ -140,7 +140,7 @@
 
 <div class="container" style="overflow: hidden !important;">
     <div style="font-family: 'Dosis', sans-serif; color:#323d47; text-align:center;overflow: hidden !important;">
-        <p style="font-size:3.5rem;">FACULTY ACHIEVEMENTS</p>
+        <p style="font-size:5rem; font-weight: 700;">FACULTY ACHIEVEMENTS</p>
         <br>
         <p style="font-size:3.0rem;">DR. AJAY MANDAL</p>
         <p style="color: #757575; font-size: 2.2rem;">Professor( Petroleum Engineering )</p>
@@ -149,7 +149,7 @@
     <div style="text-align: center;">
         <img style="width:200px; height: auto;" src="https://iitism.irins.org/assets/profile_images/608632.jpg" alt="Ajay Mandal">
     </div>
-    <div style="font-size: 2rem; padding: 2% 0%;">
+    <div style="font-size: 2rem; padding: 5% 0%;">
         <p>Dr. Ajay Mandal is currently working as Professor & Head of the Department of Petroleum Engineering at the Indian Institute of Technology (Indian School of Mines), Dhanbad. He has made us proud numerous times with his achievements:
             <ul>
                 <li> Dr. Mandal is a recipient of the prestigious DAAD Fellowship of Germany in 2008.</li>
@@ -175,7 +175,7 @@
     <div style="text-align: center !important;">
         <img style="width:200px; height:auto; " src="https://www.iitism.ac.in/assets/employee/803/803.jpg" alt="Keka Ojha">
     </div>
-    <div style="font-size: 2rem; padding: 2% 0%; ">
+    <div style="font-size: 2rem; padding: 5% 0%; ">
         <p>"A leader is someone who knows the way, shows the way and goes the way." Dr. Keka Ojha, the Professor of the Petroleum engineering department at IIT ISM Dhanbad genuinely exemplifies this quote. She has been applauded and recognized for her research
             works many times and we have mentioned some of them:
             <ul>
