--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -83,59 +83,6 @@
     <div style="padding-top:100px;"></div>
 
 
-
-
-
-    <!-- <nav class="navbar navbar-expand-lg navbar-dark"> -->
-
-    <!-- SPE logo -->
-    <!-- <a class="navbar-brand" href="#">
-            <img src="https://cdn.asp.events/CLIENT_SPE__29FE44FF_5056_B733_49EC4D60A02A6A7D/sites/Asia-Pacific-Oil-Gas-2020/media/logos/SPE_Logo_2.png"
-                 width="170px" height="80px">
-        </a> -->
-    <!-- SPE logo -->
-
-    <!--not works properly still in testing-->
-    <!--to add toggle button-->
-    <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarToggle"> -->
-    <!--to add button end-->
-    <!--/not works properly.-->
-
-    <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-    <!-- <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-item nav-link" href="{% url 'homepage' %}">Home</a>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'blog-home' %}">Blog</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Events</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Gallery</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">About Us</a>
-                </li> -->
-
-    <!-- {% if user.is_authenticated %}
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'signout-page' %}">Sign Out</a>
-                    </li>
-                {% else %}
-                    <li class="nav-item active">
-                        <a class="nav-link" href="{% url 'signin-page' %}">Sign In</a>
-                    </li>
-                {% endif %}
-
-            </ul>
-        </div>
-    </nav> -->
-    <!-- Navbar -->
-
     <!-- Messages -->
     {% if messages %} {% for message in messages %}
     <div class="alert alert-{{ message.tags }}">
@@ -160,19 +107,19 @@
         <div class="footer-top">
             <div class="container-fluid">
                 <div class="row" style="overflow: hidden">
-                    <div class="col-md-3 footer-about" data-aos="fade-up-right" data-aos-duration="1500">
+                    <div class="col-md-3 footer-about">
                         <img src="https://cdn.asp.events/CLIENT_SPE__29FE44FF_5056_B733_49EC4D60A02A6A7D/sites/Asia-Pacific-Oil-Gas-2020/media/logos/SPE_Logo_2.png" alt="logo-footer">
                         <!-- <p>
                             SPE IIT(ISM) Student Chapter
                         </p> -->
                     </div>
-                    <div class="col-md-4 offset-md-1 footer-contact" data-aos="fade-down" data-aos-duration="1500">
+                    <div class="col-md-4 offset-md-5 footer-contact">
                         <h3>Contact</h3>
                         <p><i class="fas fa-map-marker-alt"></i> Department of Petroleum Engineering, IIT (ISM) Dhanbad (695.89 km) 826004 Dhanbad, Jharkhand, India</p>
                         <p><i class="fas fa-phone"></i> Phone: 087098 43266</p>
                         <p><i class="fas fa-envelope"></i> Email: <a href="#">speiitismsc@domain.com</a></p>
                     </div>
-                    <div class="col-md-4 footer-links" data-aos="fade-up-left" data-aos-duration="1500">
+                    <!-- <div class="col-md-4 footer-links" data-aos="fade-up-left" data-aos-duration="1500">
                         <div class="row">
                             <div class="col">
                                 <h3>Links</h3>
@@ -191,7 +138,7 @@
                                 <p><a href="#">Our Team</a></p>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
