--- a/SPE-website/pages/templates/pages/base.html
+++ b/SPE-website/pages/templates/pages/base.html
@@ -73,7 +73,7 @@
                     </li>
                     {% else %}
                     <li>
-                        <a href="{% url 'signup-page' %}" class="nav-item nav-link">Sign In</a>
+                        <a href="{% url 'signin-page' %}" class="nav-item nav-link">Sign In</a>
                     </li>
                     {% endif %}
                 </ul>
