--- a/SPE-website/events/templates/events/registration_details.html
+++ b/SPE-website/events/templates/events/registration_details.html
@@ -17,9 +17,9 @@
             {% csrf_token %}
             <fieldset class ="form-group">
                 <legend class="border-bottom mb-4">
-                    Registraion Form
+                    Registration Form
                 </legend>
-                {{r_form | crispy}}
+                {{ r_form | crispy }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-info" type="submit">Register</button>
