--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -1,4 +1,7 @@
-{% extends 'pages/base.html' %} {% load static %} {% block content-blog %}
+{% extends 'pages/base.html' %}
+{% load static %}
+
+{% block content-blog %}
 <link rel="stylesheet" type="text/css" href="{% static 'pages/about.css' %}"> {% endblock content-blog %} {% block content %}
 <div class="hero-image" style="margin-top: -14px; overflow: hidden;">
     <div class="hero-text">
