--- a/SPE-website/pages/templates/pages/gazette.html
+++ b/SPE-website/pages/templates/pages/gazette.html
@@ -3,6 +3,7 @@
 <div class="container">
     <h1>Download the latest version of the SPE IIT (ISM) Dhanbad Gazette: </h1>    
     <p><a href="/media/gazettes/blah.pdf" download>Gazette1.pdf</a></p>
+    <p><a href="/media/gazettes/Gazette 9.0 Illustrating Unconventional Passion.pdf" download>Gazette2.pdf</a></p>
     
 </div>
 <br>
