--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -58,7 +58,7 @@
 <!-- ACHIEVEMENTS OF THE CHAPTER -->
 
 <div class="container" style="padding:5% 0%">
-    <div style="font-family: 'Dosis', sans-serif; color:#323d47; font-size:5rem; font-weight:600;text-align:center; letter-spacing:0.5px">
+    <div style="font-family: 'chnDosis', sans-serif; color:#323d47; font-size:5rem; font-weight:600;text-align:center; letter-spacing:0.5px">
         <p>ACHIEVEMENTS</p>
     </div>
 
