improved blogs page

--- a/SPE-website/blog/templates/blog/home.html
+++ b/SPE-website/blog/templates/blog/home.html
@@ -5,8 +5,9 @@
     {% block content-blog %}
         <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="{% static 'blog/blog-body.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'blog/post-body.css' %}">
+<!--        <link rel="stylesheet" type="text/css" href="{% static 'blog/blog-body.css' %}">-->
+<!--        <link rel="stylesheet" type="text/css" href="{% static 'blog/post-body.css' %}">-->
+        <link rel="stylesheet" type="text/css" href="{% static 'blog/blog-home.css' %}">
         <link rel="stylesheet" type="text/css" href="{% static 'blog/button-group.css' %}">
     {% endblock content-blog %}
     <!-- Adding stylesheet to base template -->
@@ -19,7 +20,7 @@
             <div id="PostContainer">
                 <!-- Blog Post body -->
                 {% for post in posts %}
-                    <div id="PostBody" class="media content-section">
+                    <div id="PostBody" class="media content-section col-md-8 mx-auto">
                         <div class="media-body">
                             <img id="PostImage" src="{{ post.image.url }}">
                             <h1 id="ArticleTitle">{{ post.title }}</h1>
