--- a/SPE-website/events/templates/events/home.html
+++ b/SPE-website/events/templates/events/home.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'blog/blog-body.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'blog/post-body.css' %}">
+<!--    <link rel="stylesheet" type="text/css" href="{% static 'blog/blog-home.css' %}">-->
     <link rel="stylesheet" type="text/css" href="{% static 'blog/button-group.css' %}">
 {% endblock content-blog %}
 <!-- Adding stylesheet to base template -->
