--- a/SPE-website/pages/templates/pages/gallery.html
+++ b/SPE-website/pages/templates/pages/gallery.html
@@ -16,7 +16,7 @@
 
     <div id="container">
       <div class="slide anim-in">
-        <div class="image" style="background-image: url(images/fipi2.jpg)"></div>
+        <div class="image" style="background-image: url(/media/gallery_images/fipi2.jpg)"></div>
         <div class="overlay"></div>
         <div class="content">
           <h1 class="title" data-title="Induction">Induction</h1>
@@ -30,7 +30,7 @@
         <div class="btn-close"></div>
       </div>
       <div class="slide anim-in">
-        <div class="image" style="background-image: url(images/i1.png)"></div>
+        <div class="image" style="background-image: url(/media/gallery_images/i1.png)"></div>
         <div class="overlay"></div>
         <div class="content">
           <h1 class="title" data-title="Intern Talk">Intern Talk</h1>
@@ -49,7 +49,7 @@
         <div class="btn-close"></div>
       </div>
       <div class="slide anim-in">
-        <div class="image" style="background-image: url(images/t1.png)"></div>
+        <div class="image" style="background-image: url(/media/gallery_images/t1.png)"></div>
         <div class="overlay"></div>
         <div class="content">
           <h1 class="title" data-title="Teacher's Day">Teacher's Day</h1>
@@ -63,7 +63,7 @@
         <div class="btn-close"></div>
       </div>
       <div class="slide anim-in">
-        <div class="image" style="background-image: url(images/fipi1.jpg)"></div>
+        <div class="image" style="background-image: url(/media/gallery_images/fipi1.jpg)"></div>
         <div class="overlay"></div>
         <div class="content">
           <h1 class="title" data-title="Fourth">Fourth</h1>
@@ -89,44 +89,44 @@
                 <a href="#" class="close"></a>
                 <li>
                     <a href="#item01">
-                        <img src="images/i1.png" alt="">
+                        <img src="/media/gallery_images/i1.png" alt="">
                     </a>
                 </li>
 
                 <li>
                     <a href="#item02">
-                        <img src="images/i2.png" alt="">
+                        <img src="/media/gallery_images/i2.png" alt="">
                     </a>
                 </li>
 
                 <li>
                     <a href="#item02">
-                        <img src="images/i3.png" alt="">
+                        <img src="/media/gallery_images/i3.png" alt="">
                     </a>
                 </li>
                 <li>
                     <a class="image" href="#item01">
-                        <img src="images/fipi2.jpg" alt="">
+                        <img src="/media/gallery_images/fipi2.jpg" alt="">
                     </a>
                 </li>
                 <li>
                     <a class="image" href="#item02">
-                        <img src="images/t1.png" alt="">
+                        <img src="/media/gallery_images/t1.png" alt="">
                     </a>
                 </li>
                 <li>
                     <a class="image" href="#item01">
-                        <img src="images/t2.png" alt="">
+                        <img src="/media/gallery_images/t2.png" alt="">
                     </a>
                 </li>
                 <li>
                     <a class="image" href="#item01">
-                        <img src="images/t3.png" alt="">
+                        <img src="/media/gallery_images/t3.png" alt="">
                     </a>
                 </li>
                 <li>
                     <a class="image" href="#item01">
-                        <img src="images/fipi1.jpg" alt="">
+                        <img src="/media/gallery_images/fipi1.jpg" alt="">
                     </a>
                 </li>
                 <!-- <li>
@@ -146,7 +146,7 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
                 </div>
 
-                    <img src="images/i1.png" alt="">
+                    <img src="/media/gallery_images/i1.png" alt="">
                 </div>
             </div> <!-- / row -->
 
@@ -160,7 +160,7 @@
                     <h1>Item 02</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus quis libero erat. Integer ac purus est. Proin erat mi, pulvinar ut magna eget, consectetur auctor turpis.</p>
                 </div>
-                <img src="images/i2.png" alt="">
+                <img src="/media/gallery_images/i2.png" alt="">
             </div> <!-- / row -->
 
         </div> <!-- / Item 02 -->
