--- a/SPE-website/blog/static/blog/blog-home.css
+++ b/SPE-website/blog/static/blog/blog-home.css
@@ -3,7 +3,7 @@
     margin-left: 50px;
     margin-bottom: 60px;
     box-shadow: 9px 12px 20px -10px rgba(0,0,0,0.39);
-   /* width: 900px;*/
+    padding: 20px;
 }
 
 #PostImage {
