--- a/SPE-website/pages/templates/pages/about.html
+++ b/SPE-website/pages/templates/pages/about.html
@@ -1,4 +1,7 @@
-{% extends 'pages/base.html' %} {% load static %} {% block content-blog %}
+{% extends 'pages/base.html' %}
+{% load static %}
+
+{% block content-blog %}
 <link rel="stylesheet" type="text/css" href="{% static 'pages/about.css' %}"> {% endblock content-blog %} {% block content %}
 <div class="hero-image" style="margin-top: -14px; overflow: hidden;">
     <div class="hero-text">
@@ -10,7 +13,7 @@
                 <div class="chevron"></div>
                 <div class="chevron"></div>
             <!-- <a class="down" href="#">Scroll down</a> -->
-            </span>
+        </span>
     </a>
 </div>
 
@@ -18,7 +21,7 @@
 
 <div class="container-fluid" style="padding: 6% 4%;">
     <div style="font-family: 'Dosis', sans-serif; color:#323d47; font-size:5rem; font-weight:600 ;text-align:center; padding: 3% 0%;">
-        <p>WHO WE ARE?</p>
+        <p>WHO ARE WE?</p>
     </div>
     <div class="row">
         <div class="col-md-6 col-sm-12" style="width: 100%; height: 500px; overflow: hidden;">
@@ -147,7 +150,7 @@
         <br>
     </div>
     <div style="text-align: center;">
-        <img style="width:200px; height: auto;" src="https://iitism.irins.org/assets/profile_images/608632.jpg" alt="Ajay Mandal">
+        <img style="width:200px; height: auto;" src="https://iitism.irins.org/assets/profile_images/608632.jpg" alt="Prof. Ajay Mandal">
     </div>
     <div style="font-size: 2rem; padding: 5% 0%;">
         <p>Dr. Ajay Mandal is currently working as Professor & Head of the Department of Petroleum Engineering at the Indian Institute of Technology (Indian School of Mines), Dhanbad. He has made us proud numerous times with his achievements:
@@ -173,7 +176,7 @@
         <br>
     </div>
     <div style="text-align: center !important;">
-        <img style="width:200px; height:auto; " src="https://www.iitism.ac.in/assets/employee/803/803.jpg" alt="Keka Ojha">
+        <img style="width:200px; height:auto; " src="https://www.iitism.ac.in/assets/employee/803/803.jpg" alt="Prof. Keka Ojha">
     </div>
     <div style="font-size: 2rem; padding: 5% 0%; ">
         <p>"A leader is someone who knows the way, shows the way and goes the way." Dr. Keka Ojha, the Professor of the Petroleum engineering department at IIT ISM Dhanbad genuinely exemplifies this quote. She has been applauded and recognized for her research
