--- a/SPE-website/pages/templates/pages/gazette.html
+++ b/SPE-website/pages/templates/pages/gazette.html
@@ -1,14 +1,30 @@
 {% extends 'pages/base.html' %}
+{% load static %}
+
+{% block content-blog %}
+    <link rel="stylesheet" type="text/css" href="{% static 'pages/gazette.css' %}">
+{% endblock content-blog %}
+
 {% block content %}
-<div class="container">
-    <h1>Download the latest version of the SPE IIT (ISM) Dhanbad Gazette: </h1>    
-    <p><a href="/media/gazettes/blah.pdf" download>Gazette1.pdf</a></p>
-    <p><a href="/media/gazettes/Gazette 9.0 Illustrating Unconventional Passion.pdf" download>Gazette2.pdf</a></p>
-    
-</div>
-<br>
-<br>
-<br>
-<br>
-<br>
+
+    <div class="d-block mx-auto">
+        <h1 class="d-flex justify-content-center" id="PageTitle">Gazette</h1>
+        <hr class="d-flex justify-content-center" id="UnderlineTitle">
+
+        <div class="container">
+            <h1>Download the latest version of the SPE IIT (ISM) Dhanbad Gazette: </h1>
+            <ul>
+                <li><a href="/media/gazettes/blah.pdf" download>Gazette1.pdf</a></li>
+                <li><a href="/media/gazettes/Gazette 9.0 Illustrating Unconventional Passion.pdf" download>Gazette2.pdf</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 {% endblock content %}
